# spring-2025-backend

./: LICENSE  README.md  compose.yml  example.env
nginx/: Dockerfile
nginx/config/: nginx.conf  (+2 more)
python/: Dockerfile  alembic.ini  example.env  pyproject.toml
python/src/sample_core/: dishka.py  exceptions.py  utils.py
python/src/sample_core/alembic/: env.py
python/src/sample_core/alembic/versions/: b94ec736da4a_fixup.py  d8798a2f8271_initial.py  fb0d9328f639_initial.py
python/src/sample_core/main/: alembic.py
python/src/sample_core/models/: __init__.py  application_config.py  base.py  category_price_info_file.py  client_case.py  client_case_category_applicability.py  client_case_resolved.py  power_hours_ats.py  power_hours_net.py  resolved_volumes_info.py  user.py  voltage_category.py  volumes_info.py
python/src/sample_core/services/: __init__.py  application_config.py  client_case_inferrer.py  client_case_resolver.py  dishka.py  docs_parser.py
python/src/sample_core/tests/: base.py
python/src/sample_rest_api/: infrastructure.py
python/src/sample_rest_api/admin/: __init__.py  views.py
python/src/sample_rest_api/dtos/: user.py
python/src/sample_rest_api/main/: rest_api.py
python/src/sample_rest_api/routers/: __init__.py  auth.py  volumes_info.py
python/src/sample_rest_server/: dishka.py  shortcuts.py
python/src/sample_rest_server/admin/: __init__.py  views.py
python/src/sample_rest_server/dtos/: user.py
python/src/sample_rest_server/main/: rest_server.py
python/src/sample_rest_server/routers/: __init__.py  auth.py  client_cases.py
(+7 files in other folders)
